[package]
name = "tempest-rendezvous"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6.8", features = ["cors"] }
